--- a/youtube-analysis.ipynb
+++ b/youtube-analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "e1e909e7",
+   "id": "8afa2735",
    "metadata": {},
    "outputs": [
     {
@@ -74,17 +74,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dc0a9562",
+   "id": "595d50e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyD_F5BaWyB2i34y_jSMH1_KNbL-bU-XjKY'\n"
+    "api_key = \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d805ac01",
+   "id": "056c2259",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f44d53f1",
+   "id": "8e9f52c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "dbd79544",
+   "id": "a5a20a8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bc97134b",
+   "id": "438dbbc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "755f84c7",
+   "id": "5aac909b",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ba5de2b",
+   "id": "f74568c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "da01f6c8",
+   "id": "59d27a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "18136d94",
+   "id": "10f6074e",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ac756266",
+   "id": "c006462f",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "395e803c",
+   "id": "f6833983",
    "metadata": {},
    "source": [
     "Data Pre-Processing"
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "ed45164d",
+   "id": "38b3d4c0",
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "3413e5e2",
+   "id": "feef1cc0",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a7d2fd09",
+   "id": "aac7afe7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "8b5d873b",
+   "id": "bb1ec9c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "be614808",
+   "id": "b230dc24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "119e4d79",
+   "id": "5de515a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1128d80",
+   "id": "809f3c54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b8628df",
+   "id": "cd0c6597",
    "metadata": {},
    "source": [
     "## Exploratory Data Analysis"
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e715bc3",
+   "id": "cfbaedbc",
    "metadata": {},
    "source": [
     "Best performing videos"
@@ -975,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "41bcf0ce",
+   "id": "1819609f",
    "metadata": {
     "scrolled": true
    },
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4360a5dd",
+   "id": "616456bd",
    "metadata": {},
    "source": [
     "Lemon is the winner by far- I knew it was popular, but didn't know it was THAT popular. Of course, compared to the top Kpop songs, the view count may not be that high... but that's for a different analysis.\n",
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "066273c7",
+   "id": "ef15604a",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38b31d2b",
+   "id": "6c86b5a3",
    "metadata": {},
    "source": [
     "Of course, this is based on the style of the channel too. Kenshi posts very little other than his megafamous songs, whereas AKB48 is most certainly dead last posts lots of different types of videos. And a LOT of them."
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "1a0cffc7",
+   "id": "05d3bda0",
    "metadata": {
     "collapsed": true
    },
@@ -1441,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "72c523b2",
+   "id": "ca9315d3",
    "metadata": {
     "collapsed": true
    },
@@ -1756,7 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "88ba7804",
+   "id": "7350ed84",
    "metadata": {
     "scrolled": true
    },
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be7e7d99",
+   "id": "5990cbcf",
    "metadata": {},
    "source": [
     "# Audience Interaction Level"
@@ -2070,7 +2070,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "e4fe71c3",
+   "id": "9f0b252c",
    "metadata": {
     "scrolled": true
    },
@@ -2107,7 +2107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07d814dd",
+   "id": "7e99e7d2",
    "metadata": {},
    "source": [
     "Mafumafu appears to be the clear winner in audience interaction. Twice being as big as it is no surprise, but I don't actually know that much about mafumafu despite having heard a lot of his songs, I think he has more to do with vocaloid? More of an internet figure than the rest, who are either pop groups or pop stars. \n",
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "d66c9c08",
+   "id": "f62acd27",
    "metadata": {
     "scrolled": true
    },
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10039d14",
+   "id": "ee63092e",
    "metadata": {},
    "source": [
     "Pretty much the same, AKB48 has tons of lower viewed videos (they're kind of an older group).\n",
@@ -2172,7 +2172,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "18565229",
+   "id": "dbb6cb24",
    "metadata": {
     "scrolled": false
    },
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1ecedb1",
+   "id": "6ef6a2c9",
    "metadata": {},
    "source": [
     "# Average Duration of Videos"
@@ -2217,7 +2217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "440deebc",
+   "id": "0d76f99a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2227,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "3471d3aa",
+   "id": "a3848234",
    "metadata": {
     "scrolled": false
    },
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d60912",
+   "id": "5c30c212",
    "metadata": {},
    "source": [
     "Mafumafu does some long streams, so that's pulled up his average views despite most of his popular videos being song covers. \n",
@@ -2276,7 +2276,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "4431971b",
+   "id": "a9db348b",
    "metadata": {
     "scrolled": false
    },
@@ -2317,7 +2317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de159e6",
+   "id": "ef4e5f6c",
    "metadata": {},
    "source": [
     "Removing the big ones, AKB48 and mafumafu to take a closer look at the rest"
@@ -2326,7 +2326,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "4058c21a",
+   "id": "e843d844",
    "metadata": {
     "scrolled": true
    },
@@ -2359,7 +2359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d196e7",
+   "id": "ed83ae4b",
    "metadata": {},
    "source": [
     "Honestly, not much to be seen here. Again, video upload rate is mostly based on the style of the channel"
@@ -2368,7 +2368,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "1bb692c8",
+   "id": "c234b0d3",
    "metadata": {
     "scrolled": true
    },
@@ -2407,7 +2407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe327562",
+   "id": "33ff928b",
    "metadata": {},
    "source": [
     "Both kenshi and mafumafu seem to have had their sudden growth in popularity around 2017-2020. "
@@ -2416,7 +2416,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "3cffc89e",
+   "id": "821c06d6",
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e64fa32e",
+   "id": "5788f3fe",
    "metadata": {},
    "source": [
     "(A quick reference for the line chart above, since it's kind of hard to differentiate colors. This makes it clear the two super-lines are kenshi and mafumafu)"
@@ -2462,7 +2462,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "fd9e34d6",
+   "id": "f9fe6832",
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "38ba1a89",
+   "id": "3c477d62",
    "metadata": {},
    "outputs": [
     {
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1a9b55",
+   "id": "acbd54bc",
    "metadata": {},
    "source": [
     "There doesn't seem to be a big difference in views, so Youtube is probably right when they say tags don't really matter. Especially at such a high level."
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4f3228d",
+   "id": "369ea738",
    "metadata": {},
    "source": [
     "# Conclusion\n",
@@ -2543,7 +2543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb1941a",
+   "id": "66e7771c",
    "metadata": {},
    "outputs": [],
    "source": []
